<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2024 AndroidHappyClub
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">IntentSample</string>
    <string name="back">返回</string>
    <string name="complex_data">复杂数据</string>
    <string name="hobby_dance">跳舞</string>
    <string name="hobby_read">读书</string>
    <string name="hobby_select">选择爱好</string>
    <string name="hobby_selected">您的爱好</string>
    <string name="hobby_sing">唱歌</string>
    <string name="hobby_sport">运动</string>
    <string name="image">图片</string>
    <string name="intent">Intent 示例</string>
    <string name="submit">提交</string>
</resources>
