<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2024 AndroidHappyClub
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HobbyActivity">

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbxSing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby_sing"
            android:textSize="20sp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbxDance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby_dance"
            android:textSize="20sp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbxSport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby_sport"
            android:textSize="20sp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbxReadBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobby_read"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit" />
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:src="@drawable/hobby"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>